[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/BlockingUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Font/Font.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/BlockingUI_ChestReward.gd" type="Script" id=3]

[node name="BlockingUI_ChestReward" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="SuppliesGrid" type="GridContainer" parent="CenterContainer" index="0"]
margin_left = 160.0
margin_top = 120.0
margin_right = 160.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 160, 0 )
columns = 3

[node name="Description" type="Label" parent="." index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -223.0
margin_right = 120.0
margin_bottom = -190.0
theme = ExtResource( 2 )
text = "This is the description of the thing"
align = 1
autowrap = true

[node name="InitTimer" type="Timer" parent="." index="3"]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
